--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "lint": "./node_modules/.bin/eslint 'src/**.js' 'test/**.js'"
   },
   "dependencies": {
-    "date-fns": "^3.3.1"
+    "@googlemaps/js-api-loader": "^1.16.6",
+    "date-fns": "^3.3.1",
+    "stream-browserify": "^3.0.0"
   }
 }
